ft(Manager) - Reject travel request
- create a controller to update the request table
- write tests and update swagger

[Delivers - #167765405]
