# public/api-docs/swaggerDoc.json
@@ -314,6 +314,40 @@
                 }
             }
         },
+        "/api/v1/trip/:id/reject": {
+            "patch": {
+                "tags": [
+                    "Trip"
+                ],
+                "summary": "Reject a trip request",
+                "description": "Allows a manager reject a trip request",
+                "operationId": "RejectTrip",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "",
+                        "schema": {
+                            "type": "number",
+                            "example": "1"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/Trip"
+                        }
+                    },
+                    "404": {
+                        "description": "Trip id not found"
+                    }
+                }
+            }
+        },
         "/api/v1/auth/linkedin/callback": {
             "get": {
                 "tags": [
@@ -450,6 +484,50 @@
                 "address": {
                     "type": "string",
                     "description": "Address of WeTravel User"
+                }
+            },
+            "xml": {
+                "name": "User"
+            }
+        },
+        "Trip": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "origin": {
+                    "type": "string",
+                    "example": "NIgeria"
+                },
+                "destination": {
+                    "type": "string",
+                    "example": "Kenya"
+                },
+                "travelReasons": {
+                    "type": "string",
+                    "example": "Official purpose"
+                },
+                "accommodation": {
+                    "type": "string",
+                    "example": 1
+                },
+                "status": {
+                    "type": "string",
+                    "example": "approved"
+                },
+                "userId": {
+                    "type": "string",
+                    "example": 1
+                },
+                "createdAt": {
+                    "type": "string",
+                    "example": "2019-09-13T22:25:53.354Z"
+                },
+                "updatedAt": {
+                    "type": "string",
+                    "example": "2019-09-13T22:30:00.583Z"
                 }
             },
             "xml": {
